--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Source Sans Pro";
   background-color: white;
@@ -34,6 +33,10 @@ input, button {
   float: left;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
+}
+
+#combobtn {
+  float: right !important;
 }
 
 #invader {
